package eapli.base.course.dto;

public class CourseDTO {
}
